--- a/src/I18n/composer.json
+++ b/src/I18n/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": ">=8.1",
         "ext-intl": "*",
-        "cakephp/core": "^5.2",
+        "cakephp/core": "5.2.*@dev",
         "cakephp/chronos": "^3.1"
     },
     "autoload": {
@@ -44,6 +44,10 @@
     "suggest": {
         "cakephp/cache": "Require this if you want automatic caching of translators"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-5.next": "5.2.x-dev"
+        }
+    }
 }
